Archive2/9e/e08013c2eb8397/output
main.cpp:19:5: error: no matching function for call to object of type 'std::_Bind<(lambda at main.cpp:14:24) (std::unique_ptr<int, std::default_delete<int> >)>'
    f();
    ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/functional:1129:2: note: candidate template ignored: substitution failure [with _Args = <>]: call to deleted constructor of 'std::unique_ptr<int>'
        operator()(_Args&&... __args)
        ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/functional:1143:2: note: candidate template ignored: substitution failure [with _Args = <>]: call to deleted constructor of 'std::unique_ptr<int>'
        operator()(_Args&&... __args) const
        ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/functional:1157:2: note: candidate template ignored: substitution failure [with _Args = <>]: no matching function for call to object of type 'volatile (lambda at main.cpp:14:24)'
        operator()(_Args&&... __args) volatile
        ^
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/5.1.0/../../../../include/c++/5.1.0/functional:1171:2: note: candidate template ignored: substitution failure [with _Args = <>]: no matching function for call to object of type 'const volatile (lambda at main.cpp:14:24)'
        operator()(_Args&&... __args) const volatile
        ^
1 error generated.
